hvor sker magien?

--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -90,6 +90,11 @@ Or you can use standard markdown for static figures with the following syntax:
 `![optional caption that appears below the figure](figure url){alt='alt text for
 accessibility purposes'}`
 
+```{r}
+1 %>% mean()
+```
+
+
 ![You belong in The Carpentries!](https://raw.githubusercontent.com/carpentries/logo/master/Badge_Carpentries.svg){alt='Blue Carpentries hex person logo with no text.'}
 
 ::::::::::::::::::::::::::::::::::::: callout
