mere hårdhændet jagt på magi

--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -91,7 +91,7 @@ Or you can use standard markdown for static figures with the following syntax:
 accessibility purposes'}`
 
 ```{r}
-1 %>% mean()
+mean(
 ```
 
 
