Og med ekstra debug besked

--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -93,6 +93,7 @@ accessibility purposes'}`
 ```{r}
 mean()
 print("Hvad hvis vi faktisk ændrer på markuppen?")
+print("Hvad hvis vi faktisk ændrer på markuppen?")
 ```
 
 
