--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -94,6 +94,8 @@ accessibility purposes'}`
 mean()
 print("Hvad hvis vi faktisk ændrer på markuppen?")
 print("Hvad hvis vi faktisk ændrer på markuppen?")
+print("for det kræver at der er ændret på markup")
+
 ```
 
 
